# Course-order-suggestion-system

./: Cargo.toml  README.md  build.rs  main.py  requirements.txt  requirment.txt  test.html  ttest.py
.github/: dependabot.yml
.github/workflows/: build.yml  build_windows.yml  ci.yaml
src/: main.rs
