[package]
name = "Course_order_suggestion_system"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.6", features = ["derive"] }
serde_json = "1.0"
tabled = "0.15.0"
regex = "1.10.4"

[[bin]]
name = "Course_order_suggestion_system"
path = "src/main.rs"
