[package]
name = "Course-order-suggestion-system"
description = "A course order suggestion system for NTUST"
version = "0.1.9"
edition = "2021"

[package.metadata.winresource]
OriginalFilename = "選課志願序推薦系統.exe"
LegalCopyright = "Copyright © 2024 NTUST-Tool"


[build-dependencies]
winresource = "0.1"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.15", features = ["derive"] }
serde_json = "1.0"
tabled = "0.15.0"
regex = "1.10.6"

[[bin]]
name = "Course-order-suggestion"
path = "src/main.rs"
